--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -710,6 +710,8 @@ ul {
     }
 
     &-img {
+  border-radius: 20px;
+      
       &--1 {
         width: 43rem;
         height: 28rem;
@@ -837,7 +839,7 @@ ul {
 
     @include respond(phone) {
       font-size: 4rem;
-      margin-top: 30rem;
+      margin-top: 35rem;
     }
 
     & span {
